Edge Surf: Fix backdrop filter problem on Safari

--- a/games/edge-surf/css/interface.css
+++ b/games/edge-surf/css/interface.css
@@ -94,6 +94,7 @@ html[dir="rtl"].icon-arrow-left {
   visibility: hidden;
   opacity: 0;
   backdrop-filter: blur(0px);
+  -webkit-backdrop-filter: blur(0px);
 }
 
 #game-tint.visible {
@@ -102,6 +103,7 @@ html[dir="rtl"].icon-arrow-left {
   visibility: visible;
   opacity: 1;
   backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
 }
 
 /* main game ui */
@@ -197,6 +199,7 @@ html[dir="rtl"].icon-arrow-left {
 #instruct-content.tinted {
   background-color: rgba(255,255,255,0.6);
   backdrop-filter: blur(32px);
+  -webkit-backdrop-filter: blur(32px);
   box-shadow: 0px 16px 24px rgba(0,0,0,0.16);
   border-radius: 4px;
 }
@@ -256,6 +259,7 @@ html[dir="rtl"].icon-arrow-left {
   color: #FFFFFF;
   background-color: rgba(0,0,0,0.7);
   backdrop-filter: blur(32px);
+  -webkit-backdrop-filter: blur(32px);
 }
 
 #notify-shareLink {
